--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,8 +3,30 @@ html {
 }
 
 
+.card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.1);
+}
+.card-img-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0,0.4);
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+    .card:hover .card-img-overlay {
+        opacity: 1;
+    }
+
+
+
 @media (min-width: 768px) {
-  html {
+    html {
     font-size: 16px;
   }
 }
